--- a/lang/de.json
+++ b/lang/de.json
@@ -129,8 +129,9 @@
     "Switch.Sync.Title": "Synchronisieren",
     "Switch.Sync.ShowResults": "Ergebnis anzeigen",
     "Switch.Sync.CreateVlans": "VLAN erstellen, falls nicht vorhanden",
+    "Switch.Sync.OverwriteName": "VLAN Namen überschreiben",
     "Switch.Sync.TestMode": "Testmodus",
-    "Switch.Sync.Text": "Hiermit werden die in der Datenbank hinterlegten VLANs auf die Switche übertragen.<ul><li>VLANs werden nur erstellt, nicht gelöscht.</li><li>Namen werden überschrieben.</li></ul>",
+    "Switch.Sync.Text": "Hiermit werden die in der Datenbank hinterlegten VLANs auf die Switche übertragen. Bitte wähle die gewünschten Optionen aus.",
     "Switch.Sync.Wait": "Dies dauert einige Minuten - bitte warten...",
     "Switch.Pubkey.Title": "Öffentliche Schlüssel abgleichen",
     "Switch.Pubkey.FollowingKeys": "Folgende Schlüssel werden abgeglichen",
