--- a/lang/de.json
+++ b/lang/de.json
@@ -2,14 +2,12 @@
     "Misc.Pagination.Previous": "Vorherige Seite",
     "Misc.Pagination.Next": "Nächste Seite",
     "Misc.NoScript": "<strong>JavaScript ist deaktiviert!</strong> Bitte aktiviere JavaScript um die volle Funktionalität dieser Seite zu nutzen.",
-
     "Search.Placeh.Clients": "Nach Geräten suchen...",
     "Search.Placeh.Vlan": "Nach VLAN suchen...",
     "Search.Placeh.Switch": "Nach Switch suchen...",
     "Search.Placeh.Location": "Nach Standort suchen...",
     "Search.Placeh.Log": "Nach Einträgen suchen...",
     "Search.Placeh.User": "Nach Benutzern suchen...",
-
     "Button.Delete": "Löschen",
     "Button.Save": "Speichern",
     "Button.Cancel": "Abbrechen",
@@ -17,19 +15,19 @@
     "Button.Edit": "Bearbeiten",
     "Button.Sync": "Synchronisieren",
     "Button.Start": "Ausführen",
-    "Button.Close" : "Schließen",
+    "Button.Close": "Schließen",
     "Button.CreateBackup": "Backup erstellen",
     "Button.SyncVlans": "VLANs synchronisieren",
     "Button.SyncPubkeys": "Öffentliche Schlüssel synchronisieren",
-
     "Modal.Key.Add": "Schlüssel hinzufügen",
     "Modal.Key.Add.Name": "Schlüsselname",
     "Modal.Key.Add.Pubkey": "Öffentlicher Schlüssel",
     "Modal.Key.Delete": "Schlüssel löschen",
     "Modal.Key.Delete.Desc": "Möchtest du den Schlüssel wirklich löschen?",
-
+    "EditBuilding": "Gebäude bearbeiten",
+    "DeleteBuilding": "Gebäude löschen",
+    "Building.DeleteText": "Möchtest du das Gebäude wirklich löschen?",
     "Setup.Privatekey.SSH": "Privatekey für SSH hochladen",
-
     "Menu.Clients": "Endgeräte",
     "Menu.Vlans": "VLANs",
     "Menu.Switches": "Switche",
@@ -41,13 +39,12 @@
     "Menu.Trunks": "Trunks",
     "Menu.Uplinks": "Uplinks",
     "Menu.Execute": "SSH ausführen",
-    "Menu.Log": "Logs",  
+    "Menu.Log": "Logs",
     "Menu.Label.Management": "Verwaltung",
     "Menu.Label.User": "Benutzer",
     "Menu.Label.Action": "Aktionen",
     "Menu.Label.System": "System",
     "Menu.Label.Data": "Daten",
-
     "Header.Clients": "Geräte",
     "Header.Vlans": "VLANs",
     "Header.Switches": "Switche",
@@ -60,42 +57,32 @@
     "Header.Uplinks": "Uplinks",
     "Header.Usersettings": "Deine Einstellungen",
     "Header.SSH": "Befehl ausführen",
-
-
     "Buildings": "Gebäude",
     "Location": "Standort",
     "Actions": "Aktionen",
     "Login": "Anmelden",
     "Options": "Optionen",
-
     "Log.User": "Benutzer",
     "Log.Action": "Aktion",
     "Log.Data": "Daten",
-
     "Mail.Weekly Backup Report": "Wöchentlicher Bericht Backups Switche",
     "Mail.Success": "Erfolgreich",
     "Mail.Failed": "Fehlgeschlagen",
     "Mail.Switch": "Switch",
     "Mail.Last successful backup": "Letztes erfolgreiches Backup",
-
     "System.Addititional Pubkeys": "Öffentliche Schlüssel",
     "System.User": "Rollenverwaltung",
     "System.Desc": "Beschreibung",
     "System.Key": "Schlüssel",
-
     "User.ChangeTheme": "Theme wechseln",
-
     "Uplink.Edit": "Uplinks bearbeiten",
-
     "Trunk.Info.ArubaCX": "*ArubaCX: Ports ohne getaggetes VLAN werden als Trunk angesehen",
-
     "Description": "Beschreibung",
     "Vlan.Subnet": "IP-Bereich",
     "Vlan.Scan": "NMAP-Scan",
     "Vlan.IsClientVlan": "Dieses VLAN im Endgerätescan nicht berücksichtigen",
     "Vlan.Sync": "Synchronisieren",
     "Vlan.Edit": "VLAN bearbeiten",
-
     "Backup.Success": "Erfolgreich",
     "Backup.Failed": "Fehlgeschlagen",
     "Backup.Restore": "Wiederherstellen",
@@ -107,13 +94,13 @@
     "Backup.Restore.SwitchPassword": "Passwort vom Switch",
     "Backup.Restore.Title": "Backup wiederherstellen",
     "Backup.Delete.Title": "Backup löschen",
-
     "Switch.Delete.Title": "Switch löschen",
     "Switch.Delete.Desc": "Möchtest du den Switch wirklich löschen?",
     "Switch.Edit.Title": "Switch bearbeiten",
     "Switch.Create.Title": "Switch erstellen",
     "Switch.Location": "Standort",
-    "Switch.Type": "Typ",
+    "Type": "Typ",
+    "Preview": "Vorschau",
     "Switch.Sync.Title": "Synchronisieren",
     "Switch.Sync.ShowResults": "Ergebnis anzeigen",
     "Switch.Sync.CreateVlans": "VLAN erstellen, falls nicht vorhanden",
@@ -135,22 +122,43 @@
     "Switch.Live.Serialnumber": "Seriennummer",
     "Switch.Live.Portname": "Beschreibung",
     "Switch.Live.NoTrunksFound": "Keine Trunks gefunden",
-
     "Switch.SSH.Output": "Ausgabe",
     "Switch.SSH.Command": "Kommando",
     "Switch.SSH.SelectSwitch": "Switch auswählen",
+    "Switch.SSH.ByLocation": "Nach Standort",
+    "Switch.SSH.AllSwitches": "Alle Switches",
     "Switch.SSH.FastCmd": "Schnellkommando",
     "Switch.SSH.Info": "Bitte beachte, dass eingegebene Befehle nicht überprüft werden.",
     "Switch.SSH.Execute.Title": "Befehl ausführen",
     "Switch.SSH.Execute.Desc": "Soll der Befehl wirklich ausgeführt werden?",
-
     "Role": "Rolle",
-    "Role.Admin": "Administrator", 
+    "Clients": "Endgeräte",
+    "Role.Admin": "Administrator",
     "Role.User": "Benutzer",
     "Modal.User.Role": "Rolle verwalten",
-
     "MacFilter.Title": "MAC-Typenzuordnung erstellen",
     "System.MacType": "MAC-Typenzuordnung",
     "System.MacIcon": "MAC-Typen-Symbole",
-    "System.IgnoreVlans": "VLANs ignorieren in der Endgeräteübersicht"
+    "System.IgnoreVlans": "VLANs ignorieren in der Endgeräteübersicht",
+    "Msg.SwitchCreated": "Switch erfolgreich erstellt",
+    "Msg.SwitchUpdated": "Switch erfolgreich aktualisiert",
+    "Msg.SwitchDeleted": "Switch erfolgreich gelöscht",
+    "Msg.VlanCreated": "VLAN erfolgreich erstellt",
+    "Msg.VlanUpdated": "VLAN erfolgreich aktualisiert",
+    "Msg.VlanDeleted": "VLAN erfolgreich gelöscht",
+    "Msg.BackupDeleted": "Backup erfolgreich gelöscht",
+    "Msg.BackupRestored": "Backup erfolgreich wiederhergestellt",
+    "Msg.UplinkUpdated": "Uplinks erfolgreich aktualisiert",
+    "Msg.LocationCreated": "Standort erfolgreich erstellt",
+    "Msg.LocationUpdated": "Standort erfolgreich aktualisiert",
+    "Msg.LocationDeleted": "Standort erfolgreich gelöscht",
+    "Msg.ThemeUpdated": "Theme erfolgreich aktualisiert",
+    "Msg.PubkeyDeleted": "Öffentlicher Schlüssel erfolgreich gelöscht",
+    "Msg.PubkeyCreated": "Öffentlicher Schlüssel erfolgreich erstellt",
+    "Msg.UserRoleUpdated": "Rolle erfolgreich aktualisiert",
+    "Msg.MacTypeCreated": "MAC-Typenzuordnung erfolgreich erstellt",
+    "Msg.MacTypeDeleted": "MAC-Typenzuordnung erfolgreich gelöscht",
+    "Msg.MacTypeIconUpdated": "MAC-Typen-Symbole erfolgreich aktualisiert",
+    "Msg.VlansSynced": "VLANs erfolgreich synchronisiert",
+    "Select.SelectText": "Auswählen..."
 }
