--- a/lang/de.json
+++ b/lang/de.json
@@ -16,6 +16,10 @@
     "Button.Sync": "Synchronisieren",
     "Button.Start": "Ausführen",
     "Button.Close": "Schließen",
+    "GUI_External": "Switch in neuen Tab öffnen",
+    "Show": "Mehr anzeigen",
+    "Portstats.for": "Statistiken für Port",
+    "Switch.Edit.Hint": "Switch bearbeiten",
     "Button.CreateBackup": "Backup erstellen",
     "Button.SyncVlans": "VLANs synchronisieren",
     "Button.SyncPubkeys": "Öffentliche Schlüssel synchronisieren",
@@ -87,13 +91,13 @@
     "Backup.Failed": "Fehlgeschlagen",
     "Backup.Restore": "Wiederherstellen",
     "Backup.Download": "Herunterladen",
-    "Backup.Delete": "Löschen",
+    "Delete": "Löschen",
     "Backup.Created": "Erstellt",
     "Backup.View": "Ansehen",
     "Backup.Last": "Letztes Backup",
     "Backup.Restore.SwitchPassword": "Passwort vom Switch",
     "Backup.Restore.Title": "Backup wiederherstellen",
-    "Backup.Delete.Title": "Backup löschen",
+    "Delete.Title": "Backup löschen",
     "Switch.Delete.Title": "Switch löschen",
     "Switch.Delete.Desc": "Möchtest du den Switch wirklich löschen?",
     "Switch.Edit.Title": "Switch bearbeiten",
