--- a/lang/en.json
+++ b/lang/en.json
@@ -16,6 +16,10 @@
     "Button.Sync": "Sync",
     "Button.Start": "Start",
     "Button.Close": "Close",
+    "GUI_External": "Open Switch in new Tab",
+    "Show": "Show more",
+    "Switch.Edit.Hint": "Edit Switch",
+    "Portstats.for": "Statistics for Port ",
     "Button.CreateBackup": "Create Backup",
     "Button.SyncVlans": "Sync VLANs",
     "Button.SyncPubkeys": "Sync Public Keys",
@@ -87,13 +91,13 @@
     "Backup.Failed": "Failed",
     "Backup.Restore": "Restore",
     "Backup.Download": "Download",
-    "Backup.Delete": "Delete",
+    "Delete": "Delete",
     "Backup.Created": "Created",
     "Backup.View": "View",
     "Backup.Last": "Last Backup",
     "Backup.Restore.SwitchPassword": "Switch Password",
     "Backup.Restore.Title": "Restore Backup",
-    "Backup.Delete.Title": "Delete Backup",
+    "Delete.Title": "Delete Backup",
     "Switch.Delete.Title": "Delete Switch",
     "Switch.Delete.Desc": "Do you really want to delete the switch?",
     "Switch.Edit.Title": "Edit Switch",
