Location, Room and Building rewrited

--- a/lang/de.json
+++ b/lang/de.json
@@ -1,13 +1,37 @@
 {
+
+
+    "Delete.Room": "Raum löschen",
+    "Delete.Location": "Standort löschen",
+    "Delete.Vlan": "VLAN löschen",
+    "Delete.Switch": "Switch löschen",
+    "Delete.Building": "Gebäude löschen",
+    "Edit.Room": "Raum bearbeiten",
+    "Edit.Location": "Standort bearbeiten",
+    "Edit.Vlan": "VLAN bearbeiten",
+    "Edit.Switch": "Switch bearbeiten",
+    "Edit.Building": "Gebäude bearbeiten",
+    "Delete.Backup": "Backup löschen",
+    "Delete.Backup.Desc": "Möchtest du das Backup wirklich löschen?",
+    "Delete.Backup.Success": "Backup erfolgreich gelöscht",
+    "Delete.Backup.Failed": "Backup konnte nicht gelöscht werden",
+    "Delete.Switch.Desc": "Möchtest du den Switch wirklich löschen?",
+    "Delete.Location.Desc": "Möchtest du den Standort wirklich löschen?",
+    "Delete.Room.Desc": "Möchtest du den Raum wirklich löschen?",
+    "Delete.Vlan.Desc": "Möchtest du das VLAN wirklich löschen?",
+    "Delete.Building.Desc": "Möchtest du das Gebäude wirklich löschen?",
+
     "Misc.Pagination.Previous": "Vorherige Seite",
     "Misc.Pagination.Next": "Nächste Seite",
     "Misc.NoScript": "<strong>JavaScript ist deaktiviert!</strong> Bitte aktiviere JavaScript um die volle Funktionalität dieser Seite zu nutzen.",
+
     "Search.Placeh.Clients": "Nach Geräten suchen...",
     "Search.Placeh.Vlan": "Nach VLAN suchen...",
     "Search.Placeh.Switch": "Nach Switch suchen...",
     "Search.Placeh.Location": "Nach Standort suchen...",
     "Search.Placeh.Log": "Nach Einträgen suchen...",
     "Search.Placeh.User": "Nach Benutzern suchen...",
+
     "Button.Delete": "Löschen",
     "Button.Save": "Speichern",
     "Button.Cancel": "Abbrechen",
@@ -16,6 +40,7 @@
     "Button.Sync": "Synchronisieren",
     "Button.Start": "Ausführen",
     "Button.Close": "Schließen",
+
     "GUI_External": "Switch in neuen Tab öffnen",
     "Show": "Mehr anzeigen",
     "Portstats.for": "Statistiken für Port",
@@ -28,8 +53,6 @@
     "Modal.Key.Add.Pubkey": "Öffentlicher Schlüssel",
     "Modal.Key.Delete": "Schlüssel löschen",
     "Modal.Key.Delete.Desc": "Möchtest du den Schlüssel wirklich löschen?",
-    "EditBuilding": "Gebäude bearbeiten",
-    "DeleteBuilding": "Gebäude löschen",
     "Building.DeleteText": "Möchtest du das Gebäude wirklich löschen?",
     "Setup.Privatekey.SSH": "Privatekey für SSH hochladen",
     "Menu.Clients": "Endgeräte",
@@ -49,11 +72,14 @@
     "Menu.Label.Action": "Aktionen",
     "Menu.Label.System": "System",
     "Menu.Label.Data": "Daten",
+
     "Header.Clients": "Geräte",
     "Header.Vlans": "VLANs",
     "Header.Switches": "Switche",
     "Header.Log": "Log",
     "Header.Locations": "Standorte",
+    "Header.Buildings": "Gebäude",
+    "Header.Rooms": "Räume",
     "Header.System": "Nutzerverwaltung",
     "Header.Backups": "Backups von ",
     "Header.Backup": "Backups",
@@ -61,8 +87,13 @@
     "Header.Uplinks": "Uplinks",
     "Header.Usersettings": "Deine Einstellungen",
     "Header.SSH": "Befehl ausführen",
+
     "Buildings": "Gebäude",
+    "Locations": "Standorte",
+    "Rooms": "Räume",
     "Location": "Standort",
+    "Building": "Gebäude",
+    "Room": "Raum",
     "Actions": "Aktionen",
     "Login": "Anmelden",
     "Options": "Optionen",
@@ -164,5 +195,11 @@
     "Msg.MacTypeDeleted": "MAC-Typenzuordnung erfolgreich gelöscht",
     "Msg.MacTypeIconUpdated": "MAC-Typen-Symbole erfolgreich aktualisiert",
     "Msg.VlansSynced": "VLANs erfolgreich synchronisiert",
+    "Msg.BuildingCreated": "Gebäude erfolgreich erstellt",
+    "Msg.BuildingUpdated": "Gebäude erfolgreich aktualisiert",
+    "Msg.BuildingDeleted": "Gebäude erfolgreich gelöscht",
+    "Msg.RoomCreated": "Raum erfolgreich erstellt",
+    "Msg.RoomUpdated": "Raum erfolgreich aktualisiert",
+    "Msg.RoomDeleted": "Raum erfolgreich gelöscht",
     "Select.SelectText": "Auswählen..."
 }
