Vlans untagging tagging, Switch details, vlan details and much more

--- a/lang/de.json
+++ b/lang/de.json
@@ -181,6 +181,7 @@
     "Msg.VlanCreated": "VLAN erfolgreich erstellt",
     "Msg.VlanUpdated": "VLAN erfolgreich aktualisiert",
     "Msg.VlanDeleted": "VLAN erfolgreich gelöscht",
+    "Msg.BackupCreated": "Backup erfolgreich erstellt",
     "Msg.BackupDeleted": "Backup erfolgreich gelöscht",
     "Msg.BackupRestored": "Backup erfolgreich wiederhergestellt",
     "Msg.UplinkUpdated": "Uplinks erfolgreich aktualisiert",
@@ -201,5 +202,36 @@
     "Msg.RoomCreated": "Raum erfolgreich erstellt",
     "Msg.RoomUpdated": "Raum erfolgreich aktualisiert",
     "Msg.RoomDeleted": "Raum erfolgreich gelöscht",
-    "Select.SelectText": "Auswählen..."
+    "Select.SelectText": "Auswählen...",
+
+    "Vlan.Sync.Title": "VLANs synchronisieren - Ergebnisse",
+    "Vlan.Sync.Jobs": "Aufgaben",
+    "Vlan.Sync.NoJobs": "Keine Aufgaben vorhanden",
+    "Vlan.Sync.Name": "- Name ändern",
+    "Vlan.Sync.Create": "- Erstellen",
+    "Vlan.Sync.Delete": "- Löschen",
+    "Vlan.Sync.Results": "Ergebnisse",
+    "Vlan.Sync.Result.Created": ":created von :total VLANs wurden erstellt",
+    "Vlan.Sync.Result.Deleted": ":deleted von :total VLANs wurden gelöscht",
+    "Vlan.Sync.Result.Renamed": ":renamed von :total VLANs wurden umbenannt",
+    "Vlan.Sync.Log.Created": "- Erfolgreich erstellt",
+    "Vlan.Sync.Log.Deleted": "- Erfolgreich gelöscht",
+    "Vlan.Sync.Log.Renamed": "- Erfolgreich umbenannt",
+    "Vlan.Sync.Log.NotCreated": "- Nicht erstellt",
+    "Vlan:Sync.Log.NotDeleted": "- Nicht gelöscht",
+    "Vlan.Sync.Log.NotRenamed": "- Nicht umbenannt",
+    "Vlan.Sync.Time": "Synchronisiert in :time Sekunden",
+
+    "Vlan.Update.Success": ":success von :total Ports aktualisiert",
+    "Vlan.Update.Tagging.Success": ":success von :total VLANs auf Port :port aktualisiert",
+    "Vlan.Update.Error": ":failed von :total Ports konnten nicht aktualisiert werden",
+    "Vlan.Update.Error.Untagged": "Fehler: VLAN :vlan konnte auf Port :port nicht ohne Tag eingerichtet werden",
+    "Vlan.Update.Error.Tagged": "Fehler: VLAN :vlan konnte auf Port :port nicht mit Tag eingerichtet werden",
+    "Vlan.Update.Success.Tagged": "VLAN :vlan erfolgreich auf Port :port mit Tag eingerichtet",
+    "Vlan.Update.Success.Remove.Tagged": "VLAN :vlan erfolgreich von Port :port entfernt",
+    "Vlan.Update.Error.Remove.Tagged": "Fehler: VLAN :vlan konnte nicht von Port :port entfernt werden",
+
+    "DeviceNotFound": "Switch nicht gefunden",
+    "Pubkeys.Sync.Success": "Öffentliche Schlüssel erfolgreich synchronisiert",
+    "Pubkeys.Sync.NotEnough": "Mindestens 2 Schlüssel müssen vorhanden sein"
 }
