--- a/lang/de.json
+++ b/lang/de.json
@@ -1,6 +1,4 @@
 {
-
-
     "Delete.Room": "Raum löschen",
     "Delete.Location": "Standort löschen",
     "Delete.Vlan": "VLAN löschen",
@@ -10,6 +8,7 @@
     "Edit.Location": "Standort bearbeiten",
     "Edit.Vlan": "VLAN bearbeiten",
     "Edit.Switch": "Switch bearbeiten",
+    "Uplink.Edit": "Uplinks bearbeiten",
     "Edit.Building": "Gebäude bearbeiten",
     "Delete.Backup": "Backup löschen",
     "Delete.Backup.Desc": "Möchtest du das Backup wirklich löschen?",
@@ -20,10 +19,12 @@
     "Delete.Room.Desc": "Möchtest du den Raum wirklich löschen?",
     "Delete.Vlan.Desc": "Möchtest du das VLAN wirklich löschen?",
     "Delete.Building.Desc": "Möchtest du das Gebäude wirklich löschen?",
+    "Building.DeleteText": "Möchtest du das Gebäude wirklich löschen?",
 
     "Misc.Pagination.Previous": "Vorherige Seite",
     "Misc.Pagination.Next": "Nächste Seite",
     "Misc.NoScript": "<strong>JavaScript ist deaktiviert!</strong> Bitte aktiviere JavaScript um die volle Funktionalität dieser Seite zu nutzen.",
+    "Misc.Select.SelectText": "Auswählen...",
 
     "Search.Placeh.Clients": "Nach Geräten suchen...",
     "Search.Placeh.Vlan": "Nach VLAN suchen...",
@@ -34,108 +35,29 @@
 
     "Button.Delete": "Löschen",
     "Button.Save": "Speichern",
+    "Button.Create": "Erstellen",
     "Button.Cancel": "Abbrechen",
     "Button.Add": "Hinzufügen",
     "Button.Edit": "Bearbeiten",
     "Button.Sync": "Synchronisieren",
     "Button.Start": "Ausführen",
     "Button.Close": "Schließen",
-
-    "GUI_External": "Switch in neuen Tab öffnen",
-    "Show": "Mehr anzeigen",
-    "Portstats.for": "Statistiken für Port",
-    "Switch.Edit.Hint": "Switch bearbeiten",
     "Button.CreateBackup": "Backup erstellen",
     "Button.SyncVlans": "VLANs synchronisieren",
     "Button.SyncPubkeys": "Öffentliche Schlüssel synchronisieren",
+
     "Modal.Key.Add": "Schlüssel hinzufügen",
     "Modal.Key.Add.Name": "Schlüsselname",
     "Modal.Key.Add.Pubkey": "Öffentlicher Schlüssel",
     "Modal.Key.Delete": "Schlüssel löschen",
     "Modal.Key.Delete.Desc": "Möchtest du den Schlüssel wirklich löschen?",
-    "Building.DeleteText": "Möchtest du das Gebäude wirklich löschen?",
-    "Setup.Privatekey.SSH": "Privatekey für SSH hochladen",
-    "Menu.Clients": "Endgeräte",
-    "Menu.Vlans": "VLANs",
-    "Menu.Switches": "Switche",
-    "Menu.System": "Einstellungen",
-    "Menu.Logout": "Abmelden",
-    "Menu.Usersettings": "Anpassen",
-    "Menu.Backups": "Backups",
-    "Menu.Locations": "Standorte",
-    "Menu.Trunks": "Trunks",
-    "Menu.Uplinks": "Uplinks",
-    "Menu.Execute": "SSH ausführen",
-    "Menu.Log": "Logs",
-    "Menu.Label.Management": "Verwaltung",
-    "Menu.Label.User": "Benutzer",
-    "Menu.Label.Action": "Aktionen",
-    "Menu.Label.System": "System",
-    "Menu.Label.Data": "Daten",
+    "Modal.User.Role": "Rolle verwalten",
 
-    "Header.Clients": "Geräte",
-    "Header.Vlans": "VLANs",
-    "Header.Switches": "Switche",
-    "Header.Log": "Log",
-    "Header.Locations": "Standorte",
-    "Header.Buildings": "Gebäude",
-    "Header.Rooms": "Räume",
-    "Header.System": "Nutzerverwaltung",
-    "Header.Backups": "Backups von ",
-    "Header.Backup": "Backups",
-    "Header.Trunks": "Trunks",
-    "Header.Uplinks": "Uplinks",
-    "Header.Usersettings": "Deine Einstellungen",
-    "Header.SSH": "Befehl ausführen",
-
-    "Buildings": "Gebäude",
-    "Locations": "Standorte",
-    "Rooms": "Räume",
-    "Location": "Standort",
-    "Building": "Gebäude",
-    "Room": "Raum",
-    "Actions": "Aktionen",
-    "Login": "Anmelden",
-    "Options": "Optionen",
-    "Log.User": "Benutzer",
-    "Log.Action": "Aktion",
-    "Log.Data": "Daten",
-    "Mail.Weekly Backup Report": "Wöchentlicher Bericht Backups Switche",
-    "Mail.Success": "Erfolgreich",
-    "Mail.Failed": "Fehlgeschlagen",
-    "Mail.Switch": "Switch",
-    "Mail.Last successful backup": "Letztes erfolgreiches Backup",
-    "System.Addititional Pubkeys": "Öffentliche Schlüssel",
-    "System.User": "Rollenverwaltung",
-    "System.Desc": "Beschreibung",
-    "System.Key": "Schlüssel",
-    "User.ChangeTheme": "Theme wechseln",
-    "Uplink.Edit": "Uplinks bearbeiten",
-    "Trunk.Info.ArubaCX": "*ArubaCX: Ports ohne getaggetes VLAN werden als Trunk angesehen",
-    "Description": "Beschreibung",
-    "Vlan.Subnet": "IP-Bereich",
-    "Vlan.Scan": "NMAP-Scan",
-    "Vlan.IsClientVlan": "Dieses VLAN im Endgerätescan nicht berücksichtigen",
-    "Vlan.Sync": "Synchronisieren",
-    "Vlan.Edit": "VLAN bearbeiten",
-    "Backup.Success": "Erfolgreich",
-    "Backup.Failed": "Fehlgeschlagen",
-    "Backup.Restore": "Wiederherstellen",
-    "Backup.Download": "Herunterladen",
-    "Delete": "Löschen",
-    "Backup.Created": "Erstellt",
-    "Backup.View": "Ansehen",
-    "Backup.Last": "Letztes Backup",
-    "Backup.Restore.SwitchPassword": "Passwort vom Switch",
-    "Backup.Restore.Title": "Backup wiederherstellen",
-    "Delete.Title": "Backup löschen",
     "Switch.Delete.Title": "Switch löschen",
     "Switch.Delete.Desc": "Möchtest du den Switch wirklich löschen?",
     "Switch.Edit.Title": "Switch bearbeiten",
     "Switch.Create.Title": "Switch erstellen",
     "Switch.Location": "Standort",
-    "Type": "Typ",
-    "Preview": "Vorschau",
     "Switch.Sync.Title": "Synchronisieren",
     "Switch.Sync.ShowResults": "Ergebnis anzeigen",
     "Switch.Sync.CreateVlans": "VLAN erstellen, falls nicht vorhanden",
@@ -166,15 +88,94 @@
     "Switch.SSH.Info": "Bitte beachte, dass eingegebene Befehle nicht überprüft werden.",
     "Switch.SSH.Execute.Title": "Befehl ausführen",
     "Switch.SSH.Execute.Desc": "Soll der Befehl wirklich ausgeführt werden?",
-    "Role": "Rolle",
-    "Clients": "Endgeräte",
+    "Switch.Edit.Hint": "Switch bearbeiten",
+
+    "GUI_External": "Switch in neuen Tab öffnen",
+    "Show": "Mehr anzeigen",
+    "Portstats.for": "Statistiken für Port",
+    "Setup.Privatekey.SSH": "Privatekey für SSH hochladen",
+
     "Role.Admin": "Administrator",
     "Role.User": "Benutzer",
-    "Modal.User.Role": "Rolle verwalten",
+    "System.Addititional Pubkeys": "Öffentliche Schlüssel",
+    "System.User": "Rollenverwaltung",
+    "System.Desc": "Beschreibung",
+    "System.Key": "Schlüssel",
+    "User.ChangeTheme": "Theme wechseln",
+    "Description": "Beschreibung",
+    "DeviceNotFound": "Switch nicht gefunden",
     "MacFilter.Title": "MAC-Typenzuordnung erstellen",
     "System.MacType": "MAC-Typenzuordnung",
     "System.MacIcon": "MAC-Typen-Symbole",
     "System.IgnoreVlans": "VLANs ignorieren in der Endgeräteübersicht",
+
+    "Menu.Clients": "Endgeräte",
+    "Menu.Vlans": "VLANs",
+    "Menu.Switches": "Switche",
+    "Menu.System": "Einstellungen",
+    "Menu.Logout": "Abmelden",
+    "Menu.Usersettings": "Anpassen",
+    "Menu.Backups": "Backups",
+    "Menu.Locations": "Standorte",
+    "Menu.Trunks": "Trunks",
+    "Menu.Uplinks": "Uplinks",
+    "Menu.Execute": "SSH ausführen",
+    "Menu.Log": "Logs",
+    "Menu.Label.Management": "Verwaltung",
+    "Menu.Label.User": "Benutzer",
+    "Menu.Label.Action": "Aktionen",
+    "Menu.Label.System": "System",
+    "Menu.Label.Data": "Daten",
+
+    "Header.Clients": "Geräte",
+    "Header.Vlans": "VLANs",
+    "Header.Switches": "Switche",
+    "Header.Log": "Log",
+    "Header.Locations": "Standorte",
+    "Header.Buildings": "Gebäude",
+    "Header.Rooms": "Räume",
+    "Header.System": "Systemeinstellungen",
+    "Header.Backups": "Backups von ",
+    "Header.Backup": "Backups",
+    "Header.Trunks": "Trunks",
+    "Header.Uplinks": "Uplinks",
+    "Header.Usersettings": "Deine Einstellungen",
+    "Header.SSH": "Befehl ausführen",
+
+    "Buildings": "Gebäude",
+    "Locations": "Standorte",
+    "Rooms": "Räume",
+    "Location": "Standort",
+    "Building": "Gebäude",
+    "Room": "Raum",
+    "Actions": "Aktionen",
+    "Login": "Anmelden",
+    "Options": "Optionen",
+    "Role": "Rolle",
+    "Clients": "Endgeräte",
+    "Type": "Typ",
+    "Preview": "Vorschau",
+
+    "Log.User": "Benutzer",
+    "Log.Action": "Aktion",
+    "Log.Data": "Daten",
+
+    "Mail.Weekly Backup Report": "Wöchentlicher Bericht Backups Switche",
+    "Mail.Success": "Erfolgreich",
+    "Mail.Failed": "Fehlgeschlagen",
+    "Mail.Switch": "Switch",
+    "Mail.Last successful backup": "Letztes erfolgreiches Backup",
+
+    "Backup.Success": "Erfolgreich",
+    "Backup.Failed": "Fehlgeschlagen",
+    "Backup.Restore": "Wiederherstellen",
+    "Backup.Download": "Herunterladen",
+    "Backup.Created": "Erstellt",
+    "Backup.View": "Ansehen",
+    "Backup.Last": "Letztes Backup",
+    "Backup.Restore.SwitchPassword": "Passwort vom Switch",
+    "Backup.Restore.Title": "Backup wiederherstellen",
+
     "Msg.SwitchCreated": "Switch erfolgreich erstellt",
     "Msg.SwitchUpdated": "Switch erfolgreich aktualisiert",
     "Msg.SwitchDeleted": "Switch erfolgreich gelöscht",
@@ -192,6 +193,7 @@
     "Msg.PubkeyDeleted": "Öffentlicher Schlüssel erfolgreich gelöscht",
     "Msg.PubkeyCreated": "Öffentlicher Schlüssel erfolgreich erstellt",
     "Msg.UserRoleUpdated": "Rolle erfolgreich aktualisiert",
+    "Msg.Error.UserRoleUpdate": "Du kannst deine eigene Rolle nicht ändern",
     "Msg.MacTypeCreated": "MAC-Typenzuordnung erfolgreich erstellt",
     "Msg.MacTypeDeleted": "MAC-Typenzuordnung erfolgreich gelöscht",
     "Msg.MacTypeIconUpdated": "MAC-Typen-Symbole erfolgreich aktualisiert",
@@ -202,7 +204,6 @@
     "Msg.RoomCreated": "Raum erfolgreich erstellt",
     "Msg.RoomUpdated": "Raum erfolgreich aktualisiert",
     "Msg.RoomDeleted": "Raum erfolgreich gelöscht",
-    "Select.SelectText": "Auswählen...",
 
     "Vlan.Sync.Title": "VLANs synchronisieren - Ergebnisse",
     "Vlan.Sync.Jobs": "Aufgaben",
@@ -221,7 +222,6 @@
     "Vlan:Sync.Log.NotDeleted": "- Nicht gelöscht",
     "Vlan.Sync.Log.NotRenamed": "- Nicht umbenannt",
     "Vlan.Sync.Time": "Synchronisiert in :time Sekunden",
-
     "Vlan.Update.Success": ":success von :total Ports aktualisiert",
     "Vlan.Update.Tagging.Success": ":success von :total VLANs auf Port :port aktualisiert",
     "Vlan.Update.Error": ":failed von :total Ports konnten nicht aktualisiert werden",
@@ -230,8 +230,12 @@
     "Vlan.Update.Success.Tagged": "VLAN :vlan erfolgreich auf Port :port mit Tag eingerichtet",
     "Vlan.Update.Success.Remove.Tagged": "VLAN :vlan erfolgreich von Port :port entfernt",
     "Vlan.Update.Error.Remove.Tagged": "Fehler: VLAN :vlan konnte nicht von Port :port entfernt werden",
+    "Vlan.Subnet": "IP-Bereich",
+    "Vlan.Scan": "NMAP-Scan",
+    "Vlan.IsClientVlan": "Dieses VLAN im Endgerätescan nicht berücksichtigen",
+    "Vlan.Sync": "Synchronisieren",
+    "Vlan.Edit": "VLAN bearbeiten",
 
-    "DeviceNotFound": "Switch nicht gefunden",
     "Pubkeys.Sync.Success": "Öffentliche Schlüssel erfolgreich synchronisiert",
     "Pubkeys.Sync.NotEnough": "Mindestens 2 Schlüssel müssen vorhanden sein"
 }
