--- a/lang/de.json
+++ b/lang/de.json
@@ -67,7 +67,6 @@
     "Switch.Sync.OverwriteName": "VLAN Namen überschreiben",
     "Switch.Sync.TestMode": "Testmodus",
     "Switch.Sync.Text": "Hiermit werden die in der Datenbank hinterlegten VLANs auf die Switche übertragen. Bitte wähle die gewünschten Optionen aus.",
-    "Switch.Sync.Wait": "Aktion wird ausgeführt. Bitte warten...",
     "Switch.Pubkey.Title": "Öffentliche Schlüssel abgleichen",
     "Switch.Pubkey.FollowingKeys": "Folgende Schlüssel werden abgeglichen",
     "Switch.Uplink.Title": "Uplink-Ports",
@@ -196,6 +195,7 @@
     "Msg.BackupDeleted": "Backup erfolgreich gelöscht",
     "Msg.BackupRestored": "Backup erfolgreich wiederhergestellt",
     "Msg.UplinkUpdated": "Uplinks erfolgreich aktualisiert",
+    "Msg.UplinkNotUpdated": "Uplinks nicht aktualisiert",
     "Msg.LocationCreated": "Standort erfolgreich erstellt",
     "Msg.LocationUpdated": "Standort erfolgreich aktualisiert",
     "Msg.LocationDeleted": "Standort erfolgreich gelöscht",
@@ -218,7 +218,12 @@
     "Msg.ApiLoginFailed": "Anmeldung an der API fehlgeschlagen",
     "Msg.ApiPortNameSet": "Portname erfolgreich gesetzt",
     "Msg.ApiPortNameNotSet": "Portname konnte nicht gesetzt werden",
-
+    "Msg.RefreshedDevice": "Switch erfolgreich aktualisiert",
+    "Msg.FailedToRefreshDevice": "Switch konnte nicht aktualisiert werden",
+    "Msg.SubmitWait": "Aktion wird ausgeführt. Bitte warten...",
+    "Msg.ViewOutdated": "Die Ansicht ist veraltet.",
+    "Msg.ClickToRefresh": "Jetzt aktualisieren",
+    
     "Vlan.Sync.Title": "VLANs synchronisieren - Ergebnisse",
     "Vlan.Sync.Jobs": "Aufgaben",
     "Vlan.Sync.NoJobs": "Keine Aufgaben vorhanden",
