Livewire Portoverview with cookie sharing

--- a/lang/de.json
+++ b/lang/de.json
@@ -39,6 +39,7 @@
     "Button.Create": "Erstellen",
     "Button.Cancel": "Abbrechen",
     "Button.Add": "Hinzufügen",
+    "Button.Change": "Übernehmen",
     "Button.Edit": "Bearbeiten",
     "Button.Back": "Zum Switch",
     "Button.Sync": "Synchronisieren",
