--- a/lang/de.json
+++ b/lang/de.json
@@ -224,8 +224,9 @@
     "Msg.RefreshedDevice": "Switch erfolgreich aktualisiert",
     "Msg.FailedToRefreshDevice": "Switch konnte nicht aktualisiert werden",
     "Msg.SubmitWait": "Aktion wird ausgeführt. Bitte warten...",
-    "Msg.ViewOutdated": "Die Ansicht ist veraltet.",
+    "Msg.ViewOutdated": "Die Ansicht könnte veraltet sein. ",
     "Msg.ClickToRefresh": "Jetzt aktualisieren",
+    "Msg.NothingChanged": "Keine Änderungen vorgenommen",
     "Msg.NoClients": "Keine Endgeräte",
     "Msg.RouterCreated": "Router erfolgreich erstellt",
     "Msg.RouterUpdated": "Router erfolgreich aktualisiert",
