--- a/lang/de.json
+++ b/lang/de.json
@@ -102,7 +102,7 @@
     "Hint.Show": "Mehr anzeigen",
     "Hint.Updated": "Aktualisiert ",
     "Hint.NewlyCreated": "Abfrage wird durchgeführt",
-    "Portstats.for": "Statistiken für Port",
+    "Portstats.for": "Informationen über Port ",
     "Setup.Privatekey.SSH": "Privatekey für SSH hochladen",
     "Uplinks found": "Gefundene Uplinks",
     "Custom Uplinks": "Benutzerdefinierte Uplinks",
